[package]
name = "sshimas"
version = "0.1.0"
authors = ["klaus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.4"
rpassword = "4.0.5"
chrono = "0.4"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
