[package]
name = "sshimas"
version = "0.1.0"
authors = ["klaus"]
edition = "2018"

[dependencies]
clap = "2.33.0"
regex = "1.3.4"
rpassword = "4.0.5"
chrono = "0.4"
action = { package = "action", path = "src/action" }
common = { package = "common", path = "src/common" }
sqlite_connection = { package = "sqlite_connection", path = "src/sqlite_connection" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
