[package]
name = "sshimas"
version = "0.1.0"
authors = ["klaus"]
edition = "2018"

[dependencies]
clap = "2.33.0"
rpassword = "4.0.5"
action = { package = "action", path = "src/action" }
common = { package = "common", path = "src/common" }

[dependencies.sqlite_connection]
default-features = true
optional = true
package = "sqlite_connection"
path = "src/sqlite_connection"


[features]
default = ["sqlite_connection"]

