[package]
name = "sqlite_connection"
version = "0.1.0"
authors = ["Klaus Klein <klauswk1@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
action = { package = "action", path = "../action" }
common = { package = "common", path = "../common" }
clap = "2.33.0"
regex = "1.3.4"
rpassword = "4.0.5"
chrono = "0.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
